--- a/public/tournamentsDialog.html
+++ b/public/tournamentsDialog.html
@@ -25,6 +25,14 @@
 			</div>
 		</div>
 	</div>
+	<div class="row">
+		<div class="col-md-12">
+			<div class="form-group">
+				<label>Comment</label>
+				<textarea rows="3" placeholder="Leave a comment if you feel like it." ng-model="comment" class="form-control"></textarea>
+			</div>
+		</div>
+	</div>
 </div>
 
 <div class="ngdialog-buttons">
