--- a/public/profile.html
+++ b/public/profile.html
@@ -95,7 +95,7 @@
 		</div>
 		<div class="row">
 			<div class="col-sm-12">
-				<div class="my-tournaments-table">
+				<div>
 
 					<table class="table table-hover table-responsive">
 						<thead>
