--- a/public/bugReport.html
+++ b/public/bugReport.html
@@ -42,7 +42,7 @@
         </div>
 
         <div ng-show="istVorstand" class="col-sm-10 col-sm-offset-1" style="margin-top: 50px">
-            <table class="table table-hover">
+            <table class="table table-hover table-responsive">
                 <thead>
                 <tr>
                     <th class="col-md-1">ID</th>
