--- a/public/profile.html
+++ b/public/profile.html
@@ -33,7 +33,7 @@
 			<div class="col-sm-8 col-sm-offset-2">
 				<div class="user-info-table">
 
-					<table class="table">
+					<table class="table table-responsive">
 						<tr>
 							<th>id:</th>
 							<td>{{user.id}}</td>
