--- a/public/anmeldungen.html
+++ b/public/anmeldungen.html
@@ -16,7 +16,7 @@
 		<!--TOURNAMENT TABLE-->
 		<div class="col-md-12">
 
-			<table class="table table-hover table-overview">
+			<table class="table table-hover table-overview table-responsive">
 				<thead>
 				<tr>
 					<!--<th></th>-->
@@ -51,7 +51,7 @@
 		<div id="users" class="col-md-12">
 
 			<h3>{{tournament.name}}</h3>
-			<table ng-show="showUsers" class="table table-hover table-overview">
+			<table ng-show="showUsers" class="table table-hover table-overview table-responsive">
 				<thead>
 				<tr>
 					<th class="hidden-xs"><button class="btn btn-raised btn-info btn-sm" ng-click="sortUsers('id')">User ID</button></th>
