added finance view; fixed bugs

--- a/public/anmeldungen.html
+++ b/public/anmeldungen.html
@@ -29,11 +29,6 @@
 				</thead>
 				<tbody class="left-align">
 				<tr ng-repeat="tournaments in tournamentsusers" ng-click="goToUsers(tournaments)">
-					<!--<td>-->
-						<!--<button class="btn btn-raised btn-default btn-sm" ng-click="goToUsers(tournaments)">-->
-							<!--<span style="cursor: pointer; font-size: 1.45em;" class="glyphicon glyphicon-zoom-in"></span>-->
-						<!--</button>-->
-					<!--</td>-->
 					<td class="hidden-xs">{{tournaments.id}}</a></td>
 					<td>{{tournaments.name}}</a></td>
 					<td class="hidden-xs">{{tournaments.startdate | date:'dd.MM.yyyy'}}</a></td>
@@ -84,7 +79,7 @@
 					<div class="hidden-xs">
 						<td ng-hide="users.pivot_attended == 1" class="text-center">
 							<span class="glyphicon glyphicon-remove"></span><br>
-							<button ng-show="users.id == user.id || istVorstand" class="btn btn-raised btn-sm btn-primary" ng-click="went(tournament.id, users.id, users.pivot_role)">Went</button>
+							<button ng-show="istVorstand" class="btn btn-raised btn-sm btn-primary" ng-click="went(tournament.id, users.id, users.pivot_role)">Went</button>
 						</td>
 						<td ng-show="users.pivot_attended == 1" class="text-center"><span class="glyphicon glyphicon-ok"></span></td>
 					</div>
