--- a/public/tournaments.html
+++ b/public/tournaments.html
@@ -32,7 +32,13 @@
 							<td>{{t.name}}</td>
 							<td class="hidden-xs">{{t.ort}}</td>
 							<td>{{t.startdate | date:'dd.MM.yyyy'}}<br>{{t.enddate | date:'dd.MM.yyyy'}}</td>
-							<td class="hidden-xs">Teams: {{t.teamspots}}, Judges: {{t.judgespots}}</td>
+							<td class="hidden-xs">
+								Teams:
+								<span ng-show="t.teamspots == 0">tba</span>
+								<span ng-hide="t.teamspots == 0">{{t.teamspots}}</span><br>
+								Judges:
+								<span ng-show="t.judgespots == 0">tba</span>
+								<span ng-hide="t.judgespots == 0">{{t.judgespots}}</span>
 							<td>{{t.language}}</td>
 						</tr>
 					</tbody>
