--- a/public/bugReport.html
+++ b/public/bugReport.html
@@ -23,6 +23,7 @@
                             <option value=""></option>
                             <option value="UI/UX">Optic & Usability (UI/UX)</option>
                             <option value="Functionality">Functionality</option>
+                            <option value="Wishes">Ideas for improvement</option>
                             <option value="-">Other</option>
                         </select>
                     </div>
