--- a/public/tournamentsDialog.html
+++ b/public/tournamentsDialog.html
@@ -1,6 +1,7 @@
 <nav>
 	<div>
 		<h3><span class="fa fa-comments"></span> Anmeldung</h3>
+		<h6>In der Testphase, sind Turnieranmeldungen trotzdem noch auf der Turniertabelle vorzunehmen.</h6>
 		<span flex></span>
 	</div>
 </nav>
