--- a/public/bugReport.html
+++ b/public/bugReport.html
@@ -42,28 +42,35 @@
 
         </div>
 
-        <div ng-show="istVorstand" class="col-sm-10 col-sm-offset-1" style="margin-top: 50px">
+        <div ng-show="istVorstand" class="col-md-12" style="margin-top: 50px">
             <table class="table table-hover table-responsive">
                 <thead>
                 <tr>
-                    <th class="col-md-1">ID</th>
+                    <th class="col-md-1 hidden-xs">ID</th>
                     <th class="col-md-2">Type</th>
                     <th>Description</th>
-                    <th>Created at</th>
+                    <th class="col-md-2 hidden-xs">Created at</th>
                     <th>Created by</th>
                     <th class="col-md-1">Status</th>
+                    <th></th>
                 </tr>
                 </thead>
                 <tbody class="left-align">
                 <tr ng-repeat="b in bugs">
-                    <td>{{b.id}}</td>
+                    <td class="hidden-xs">{{b.id}}</td>
                     <td>{{b.type}}</td>
                     <td>{{b.description}}</td>
-                    <td>{{b.created_at | date:'medium'}}</td>
+                    <td class="hidden-xs">{{b.created_at | date:'medium'}}</td>
                     <td>{{b.user.vorname}} {{b.user.name}}</td>
                     <td>
-                        <span ng-hide="b.status == 0" class="glyphicon glyphicon-ok"></span>
-                        <span ng-show="b.status == 0" class="glyphicon glyphicon-remove"></span>
+                        <span ng-click="changeStatus(b.id)" ng-hide="b.status == 0" class="glyphicon glyphicon-ok"></span>
+                        <span ng-click="changeStatus(b.id)" ng-show="b.status == 0" class="glyphicon glyphicon-remove"></span>
+                    </td>
+                    <td>
+                        <button class="btn btn-danger btn-sm" ng-click="deleteBug(b.id)">
+                            <span class="glyphicon glyphicon-trash"> </span>
+                            Delete
+                        </button>
                     </td>
                 </tr>
                 </tbody>
