--- a/public/bugReport.html
+++ b/public/bugReport.html
@@ -51,7 +51,7 @@
                     <th>Description</th>
                     <th class="col-md-2 hidden-xs">Created at</th>
                     <th>Created by</th>
-                    <th class="col-md-1">Status</th>
+                    <th class="col-md-1"><button class="btn btn-sm btn-info" ng-click="filterBugs()">Status</button></th>
                     <th></th>
                 </tr>
                 </thead>
