--- a/public/profile.html
+++ b/public/profile.html
@@ -126,7 +126,7 @@
 								<td ng-hide="x.pivot_attended == 1" class="text-center"><span class="glyphicon glyphicon-remove"></span></td>
 								<td ng-show="x.pivot_attended == 1" class="text-center"><span class="glyphicon glyphicon-ok"></span></td>
 								<td ng-hide="x.pivot_attended == 1">
-									<button class="btn btn-danger">
+									<button class="btn btn-danger btn-sm">
 										<span class="glyphicon glyphicon-trash"> </span>
 										Delete
 									</button>
